ansible/roles/backend/files/kubernetes-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockcollector
  namespace: production
  labels:
    tier: production
    app: stockcollector
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      tier: production
      app: stockcollector
  template:
    metadata:
      labels:
        tier: production
        app: stockcollector
    spec:
      containers:
        - name: stock-prod
          image: volkanakcora96/stock_collector
          command: ["/bin/bash","-c"]
          args: ["sleep 2", "stock_collector migrate", "stock_collector runserver"]
          volumeMounts:
            - name: stock-prod-pv
              mountPath: /var
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
      nodeSelector:
        tier: production
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "production"
          effect: "NoSchedule"
      volumes:
        - name: stock-prod-pv
          persistentVolumeClaim:
            claimName: stockcollector-prod-claim
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - stockcollector
              topologyKey: kubernetes.io/hostname
