ansible/roles/backend/files/kubernetes-config/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: production
  labels:
    tier: production
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
      tier: production
  template:
    metadata:
      labels:
        app: postgresql
        tier: production
    spec:
      containers:
        - name: postgresql
          image: postgres:latest # Replace with a specific version if needed
          ports:
            - containerPort: 5432
      nodeSelector:
        tier: production
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "production"
          effect: "NoSchedule"
