ansible/roles/backend/files/kubernetes-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-prod-svc
  namespace: production
  labels:
    tier: production
    app: stockcollector
spec:
  selector:
    tier: production
    app: stockcollector
  ports:
    - protocol: TCP
      port: 80  # The port on which the service will be exposed
      targetPort: 80  # The port to which traffic will be forwarded inside the pod
