ansible/roles/backend/files/kubernetes-config/stock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockcollector-ingress
  labels:
    tier: production
    app: stockcollector
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: stockcollector-kpi.info
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: stock-prod-svc
            port: 
              number: 80
